<resources>
    <string name="app_name">ComicBase</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="user">User</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Tìm kiếm truyện…</string>
    <string name="title_see_more"><![CDATA[xem thêm >>]]></string>
    <string name="title_top_read">Truyện đọc nhiều</string>
    <string name="title_new_update">Truyện mới cập nhật</string>
    <string name="title_content">Nội dung</string>
    <string name="title_new_chapter">Chapter mới nhất</string>
    <string name="title_start_reading">Bắt đầu đọc</string>
    <string name="chapters">CHAPTERS</string>
    <string name="image_html"><![CDATA[<img data-index=\"1\" src=\"%s\" data-original=\"%s\">]]></string>
    <string name="web_view"><![CDATA[<!DOCTYPE HTML><script type=\\\"text/javascript\\\">window.onload = function(){window.location.href = \\\"ready://\\\" + document.body.offsetHeight;}</script><html manifest=\\\'./cache.manifest\\\'><head><meta name=\\\"apple-mobile-web-app-capable\\\" content=\\\"yes\\\"/><style>img{max-width:100%%; height:auto !important;width:auto !important;}; </style></head><body style=\'margin:0 ;padding:0; background-color: #ffffff;\'>%s</body></html>]]></string>
    <string name="hint_feeling_comic">Hãy viết cảm nghĩ của bạn…</string>
    <string name="title_other_name">Tên khác: %s</string>
    <string name="title_author">Tác giả: %s</string>
    <string name="title_status">Tình trạng: %s</string>
    <string name="title_viewer">Lượt xem: %s</string>
    <string name="title_type">Thể loại: %s</string>
    <string name="title_detail_category">Thể loại: %s</string>
    <string name="title_filter_all">Tất cả</string>
    <string name="title_filter_done">Hoàn thành</string>
    <string name="title_filter_type">Thể loại</string>
    <string name="action_settings">action setting</string>
    <string name="query_status">\?status=</string>
    <string name="query_sort"><![CDATA[&sort=]]></string>
    <string name="empty_search">Không có truyện nào !</string>
    <string name="message_history_search">Lịch sử tìm kiếm</string>
    <string name="message_delete_history_search">Đã xóa toàn bộ lịch sử tìm kiếm</string>


    <string name="quila_name">Quila</string>
    <string name="quila_tagline">I love bones and slippers</string>
    <string name="quila_name2">Quila!</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
</resources>
