<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="longhoang.com.comicbase.ui.detail.category.DetailCategoriesViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:elevation="@dimen/dp_15"
        android:focusable="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/sp_18"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


        <View
            android:id="@+id/view_underline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout_comic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/custom_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_underline"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabTextAppearance="@style/textTabLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_all"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_done"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_type"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_content_category"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tablayout_comic"
            app:spanCount="3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>