<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="longhoang.com.comicbase.ui.search.SearchViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:clickable="true"
        android:focusable="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@drawable/custom_search"
            app:layout_constraintBottom_toBottomOf="@id/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="@id/ic_back">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_search"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_search_comic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@android:color/transparent"
                android:hint="@string/hint_search"
                android:imeOptions="actionSearch"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_search"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_under_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_gray_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_search"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_history_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showHistory?View.VISIBLE:View.GONE}"
            app:constraint_referenced_ids="header_history,ic_trash,recycler_history_search"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/message_history_search"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_under_search"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_trash"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_5"
            android:onClick="@{()->viewModel.deleteHistory()}"
            android:src="@drawable/ic_trash"
            app:layout_constraintBottom_toBottomOf="@id/header_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_history"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_history_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_history"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_result_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{!viewModel.showHistory?View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_search"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_empty_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{viewModel.isNoData ? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_under_search">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_empty"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:layout_marginBottom="@dimen/dp_100"
                android:src="@drawable/ic_empty_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_empty_search"
                android:text="@string/empty_search"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_empty"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>