<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="longhoang.com.comicbase.ui.home.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_bg"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:id="@+id/linear_top"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_marginStart="@dimen/dp_10"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_online_manga"/>

                    <RelativeLayout
                        android:id="@+id/relative_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_5"
                        android:background="@drawable/custom_search"
                        android:onClick="@{()->viewModel.homeNavigator.clickSearch()}"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/image_search"
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_16"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dp_10"
                            android:src="@drawable/ic_search"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_toEndOf="@+id/image_search"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:hint="@string/hint_search"
                            android:inputType="text"
                            android:textSize="@dimen/sp_14"/>

                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:id="@+id/view_underline"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_underline"
                    app:layout_constraintTop_toBottomOf="@+id/linear_top"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_top_read"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:background="@android:color/white"
                    app:layout_constraintTop_toBottomOf="@+id/view_underline">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_top_read"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/dp_10"
                        android:text="@string/title_top_read"
                        android:textAllCaps="true"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:layout_width="@dimen/dp_85"
                        android:layout_height="@dimen/dp_2"
                        android:layout_below="@+id/text_top_read"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_2"
                        android:background="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_top_read"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_top_read_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="@{()->viewModel.homeNavigator.showMoreTopRead()}"
                        android:text="@string/title_see_more"
                        android:textSize="@dimen/sp_12"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_top_read"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_top_read"
                    app:spanCount="4"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_new_update"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@android:color/white"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_top_read">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_new_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/dp_10"
                        android:text="@string/title_new_update"
                        android:textAllCaps="true"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:layout_width="@dimen/dp_85"
                        android:layout_height="@dimen/dp_2"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_2"
                        android:background="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_new_update"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="@{()->viewModel.homeNavigator.showMoreNewUpdate()}"
                        android:text="@string/title_see_more"
                        android:textSize="@dimen/sp_12"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_new_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_new_update"
                    app:spanCount="3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>